fix: User details alignment

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -85,7 +85,8 @@ body {
 
 .detail-item {
   display: flex;
-  margin-bottom: 0.75rem;
+  align-items: center;
+  margin-bottom: 1.75rem;
   padding-bottom: 0.75rem;
   border-bottom: 1px solid #e9ecef;
 }
@@ -97,6 +98,8 @@ body {
 }
 
 .detail-label {
+  display: flex;
+  align-items: center;
   font-weight: 600;
   color: var(--text-color);
   min-width: 140px;
@@ -105,6 +108,9 @@ body {
 }
 
 .detail-value {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
   color: var(--text-color);
   flex-grow: 1;
 }
